feat: implement CreateWork use case and related classes, add WorkController and WorkMapper
