# application/src/main/java/port/in/model/CreateWorkCommand.java
@@ -1,0 +1,7 @@
+package port.in.model;
+
+import com.geekapps.geeklibrary.domain.model.common.Person;
+
+public record CreateWorkCommand(WorkType type, String title, String description, Person author,
+        Person illustrator) {
+}
