# application/src/main/java/port/in/model/WorkType.java
@@ -1,0 +1,7 @@
+package port.in.model;
+
+public enum WorkType {
+  MANGA,
+  ARTBOOK,
+  LIGHT_NOVEL
+}
